--- a/accounts/templates/accounts/landingpage.html
+++ b/accounts/templates/accounts/landingpage.html
@@ -17,6 +17,11 @@
   <body>
     <div class="container-fluid">
       <div class="row text-center landing">
+        {% if messages %}
+          {% for message in messages %}
+            <div class="alert {{ message.tags }}">{{ message }}</div>
+          {% endfor %}
+        {% endif %}
         <div class="col-sm my-5 rounded-bottom">
           <br />
           <h1>Investorys</h1>
@@ -57,6 +62,7 @@
               d="M0 0h1v15h15v1H0V0Zm10 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V4.9l-3.613 4.417a.5.5 0 0 1-.74.037L7.06 6.767l-3.656 5.027a.5.5 0 0 1-.808-.588l4-5.5a.5.5 0 0 1 .758-.06l2.609 2.61L13.445 4H10.5a.5.5 0 0 1-.5-.5Z"
             />
           </svg>
+          <img src="{% static 'accounts/img/b3-logo-black.png' %}" class="logo-b3" height="100">
           <br />
           <br />
         </div>
@@ -107,6 +113,5 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
-    <script src="main.js"></script>
   </body>
 </html>
