--- a/my_wallet/templates/my_wallet/edit_transactions.html
+++ b/my_wallet/templates/my_wallet/edit_transactions.html
@@ -33,11 +33,11 @@
         </div>
         <div class="mb-2">
           <label for="exampleInputPassword1" class="form-label">Preço unitário</label>
-          <input name="unite_price" type="number" step="0.01" min="0" class="form-control" id="exampleInputPassword1" value="{{unit_price}}">
+          <input name="unite_price" type="text" class="form-control" id="exampleInputPassword1" value="{{unit_price}}">
         </div>
         <div class="mb-2">
           <select class="form-select" aria-label="Default select example" name="type_of">
-            <option selected>Operação {{transaction.type_of}}</option>
+            <option selected> {{transaction.type_of}}</option>
             {% for op in types_transactions %}
             <option value={{op.0}}>{{op.1}}</option>
             {% endfor %}
@@ -45,7 +45,7 @@
         </div>
         <div class="mb-2">
           <label for="exampleInputPassword1" class="form-label">Taxa</label>
-          <input name="brokerage" type="number" step="0.01" min="0" class="form-control" id="exampleInputPassword1" value="{{brokerage}}">
+          <input name="brokerage" type="text" class="form-control" id="exampleInputPassword1" value="{{brokerage}}">
         </div>
         <button
           type="submit"
